<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_registrar_cuenta"
        tools:context="cr.tec.desarrollomovil.conexionandroidmysql.RegistrarCuenta"
        android:orientation="vertical"
        android:weightSum="1">

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signUp_firstName"
            android:hint="@string/firstName"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/signUp_lastName"
            android:hint="@string/lastName"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/signUp_userName"
            android:layout_gravity="center_horizontal"
            android:hint="@string/userName"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/signUp_eMail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/eMail"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signUp_pwd"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pwd"
            android:fontFamily="sans-seerif"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/signUp_pwdAgain"
            android:layout_gravity="center_horizontal"
            android:fontFamily="sans-serif"
            android:hint="@string/promptPwdAgain"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.20"/>

    <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_submitSignUp"
            android:id="@+id/btn_submitSignUp"
            android:layout_gravity="center_horizontal"
            android:onClick="submitNewProfile"/>
</LinearLayout>
