<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/activity_main"
        tools:context="cr.tec.desarrollomovil.conexionandroidmysql.MainActivity"
        android:orientation="vertical"
        android:weightSum="1">


    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/login_eMail"
            android:layout_gravity="center_horizontal"
            android:hint="@string/eMail"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.15"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/login_pwd"
            android:layout_gravity="center_horizontal"
            android:hint="@string/pwd"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.20"/>

    <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/logIn"
            android:id="@+id/loginButton"
            android:layout_gravity="center_horizontal"
        android:onClick="logIn" />

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.10"/>

    <Button
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_signUp"
            android:id="@+id/signUpButton"
            android:layout_gravity="center_horizontal"
        android:onClick="signUp" />

</LinearLayout>
